<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:paddingBottom="@dimen/medium_margin"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/numbersConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatButton
                style="@style/DesignUI.Widget.Button.Especial"
                android:id="@+id/returnSymbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ret"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/zeroSymbol"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zeroSymbol"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                app:layout_constraintStart_toEndOf="@id/returnSymbol"
                app:layout_constraintEnd_toStartOf="@id/pointSymbol"
                app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pointSymbol"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/point"
                app:layout_constraintStart_toEndOf="@id/zeroSymbol"
                app:layout_constraintEnd_toStartOf="@id/equalOperator"
                 app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalOperator"
                android:layout_marginStart="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/numbersConstraint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:paddingBottom="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/numbersConstraint">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberOne"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberTwo"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/two"
                app:layout_constraintStart_toEndOf="@id/numberOne"
                app:layout_constraintEnd_toStartOf="@id/numberThree"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberThree"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/three"
                app:layout_constraintStart_toEndOf="@id/numberTwo"
                app:layout_constraintEnd_toStartOf="@id/plusOperator"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusOperator"
                android:layout_marginStart="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                app:layout_constraintStart_toEndOf="@id/numberThree"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/numbersConstraint3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_margin"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/numbersConstraint2">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberFour"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/four"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberFive"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Five"
                app:layout_constraintStart_toEndOf="@id/numberFour"
                app:layout_constraintEnd_toStartOf="@id/numberSix"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberSix"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/six"
                app:layout_constraintStart_toEndOf="@id/numberFive"
                app:layout_constraintEnd_toStartOf="@id/restOperator"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/restOperator"
                android:layout_marginStart="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rest"
                app:layout_constraintStart_toEndOf="@id/numberSix"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/numbersConstraint4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_margin"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/numbersConstraint3">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberSeven"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Seven"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberEight"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                app:layout_constraintStart_toEndOf="@id/numberSeven"
                app:layout_constraintEnd_toStartOf="@id/numberNine"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/numberNine"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                app:layout_constraintStart_toEndOf="@id/numberEight"
                app:layout_constraintEnd_toStartOf="@id/multiplicationOperator"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiplicationOperator"
                android:layout_marginStart="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                app:layout_constraintStart_toEndOf="@id/numberNine"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/numbersConstraint5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_margin"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/numbersConstraint4">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAC"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button.Especial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ac"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/parenthesesSymbol"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/parentheses"
                app:layout_constraintStart_toEndOf="@id/buttonAC"
                app:layout_constraintEnd_toStartOf="@id/percentageSymbol"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/percentageSymbol"
                android:layout_marginEnd="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/percentage"
                app:layout_constraintStart_toEndOf="@id/parenthesesSymbol"
                app:layout_constraintEnd_toStartOf="@id/divOperator"
                app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divOperator"
                android:layout_marginStart="@dimen/small_margin"
                style="@style/DesignUI.Widget.Button.Operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/div"
                app:layout_constraintStart_toEndOf="@id/percentageSymbol"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintBottom_toTopOf="@id/numbersConstraint5"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
                style="@style/DesignUI.Text.Result"
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="textEnd"
                android:layout_marginEnd="@dimen/medium_margin"
                android:textSize="65sp">
        </TextView>

        <TextView
                android:id="@+id/postResult"
                style="@style/DesignUI.Text.Operation"
                android:layout_width="match_parent"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/resultTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/medium_margin">
        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>